# DirectedAcyclicGraphTryout

./: .clang-format  .editorconfig  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  POE_DAMAGE.txt  POE_MODIFIER.txt  PROJECT_SUMMARY.md  README.md  SETUP.md  VSCODE_EXTENSIONS_GUIDE.md  index.html  nodes for future reference.md
THE_EDITOR/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  SPEC_KIT_COMPENDIUM.md  notes.md
THE_EDITOR/frontend/: README.md  package-lock.json  package.json
THE_EDITOR/frontend/src/: App.tsx  index.css
THE_EDITOR/frontend/src/components/: Canvas.tsx  NodePalette.tsx  PropertiesPanel.tsx  Toolbar.tsx
THE_EDITOR/frontend/src/components/nodes/: CapNode.tsx  ConditionalNode.tsx  DerivedNode.tsx  ModifierNode.tsx  StatNode.tsx
THE_EDITOR/frontend/src/services/: persistence.ts  validation.ts  websocket.ts
THE_EDITOR/frontend/src/stores/: graphStore.ts  historyStore.ts  uiStore.ts
THE_EDITOR/frontend/src/types/: graph.ts  node.ts
include/: GameplayTag.h  GraphManager.h  GraphManagerV2.h  HistoryNode.h  Modifier.h  Producer.h  StatNode.h  WebSocketServer.h
src/: main.cpp
tests/: CMakeLists.txt  test_GameplayTag.cpp  test_GraphManager.cpp  test_HistoryNode.cpp  test_Modifier.cpp  test_Producer.cpp  test_StatNode.cpp  test_main.cpp
